updated quote events from binance